test_programs/compile_failure/comptime_static_assert_failure/src/main.nr
use std::static_assert;

comptime fn foo(x: Field) -> bool {
    static_assert(x == 4, "x != 4");
    x == 4
}

fn main() {
    comptime {
        static_assert(foo(3), "expected message");
    }
}

